--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!-- link with css and javascript-->
 	<script src="Scripts/jquery-2.1.0.min.js"></script>
-	<link rel="stylesheet" href="assets/styles.css">
+	<link rel="stylesheet" href="styles.css">
+	<script src="script.js" type="text/javascript"></script>
 	
 	<link href="https://fonts.googleapis.com/css2?family=Marvel:wght@700&display=swap" rel="stylesheet">
 
@@ -30,7 +31,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
-	<script src="assets/script.js"></script>
 
 </head>
 
