--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- link with css and javascript-->
 	<script src="Scripts/jquery-2.1.0.min.js"></script>
 	<link rel="stylesheet" href="styles.css">
-	<script src="script.js" type="text/javascript"></script>
+	<script src="script.js" type="text/javascript"/></script>
 	
 	<link href="https://fonts.googleapis.com/css2?family=Marvel:wght@700&display=swap" rel="stylesheet">
 
