--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!-- link with css and javascript-->
 	<script src="Scripts/jquery-2.1.0.min.js"></script>
-	<link rel="stylesheet" href="/styles.css">
-	<script src="/script.js" charset="utf-8" type="text/javascript"/></script>
+	<link rel="stylesheet" href="styles.css">
+	
 	
 	<link href="https://fonts.googleapis.com/css2?family=Marvel:wght@700&display=swap" rel="stylesheet">
 
@@ -51,6 +51,7 @@
 			<div class="m div10"> </div>
 		</div>
 	</div>
+	<script src="script.js" charset="utf-8" type="text/javascript"/></script>
 </body>
 
 </html>
