--- a/index.html
+++ b/index.html
@@ -14,44 +14,49 @@
 	<script src="Scripts/jquery-2.1.0.min.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	
-	
-	<link href="https://fonts.googleapis.com/css2?family=Marvel:wght@700&display=swap" rel="stylesheet">
-
-
 	<!-- CSS-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<!-- JS, Popper.js, and jQuery -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-	</script>
-
+	
+	<!-- Google fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<div class="container-fluid">
 		<div class="parent">
-			<div class="div1">
-				<h1 id="font">MARVEL</h1>
+			<div class="div1"> </div>
+			<div class="div2 m">
+				<div class="image"></div>
 			</div>
-			<div class="m div2"> </div>
-			<div class="m div3"> </div>
-			<div class="m div4"> </div>
-			<div class="m div5"> </div>
-			<div class="m div6"> </div>
-			<div class="m div7"> </div>
-			<div class="m div8"> </div>
-			<div class="m div9"> </div>
-			<div class="m div10"> </div>
+			<div class="div3 m">
+				<div class="image"></div>
+			</div>
+			<div class="div4 m">
+				<div class="image"></div>
+			</div>
+			<div class="div5 m">
+				<div class="image"></div>
+			</div>
+			<div class="div6 m">
+				<div class="image"></div>
+			</div>
+			<div class="div7 m">
+				<div class="image"></div>
+			</div>
+			<div class="div8 m">
+				<div class="image"></div>
+			</div>
+			<div class="div9 m">
+				<div class="image"></div>
+			</div>
+			<div class="div10 m">
+				<div class="image"></div>
+			</div>
 		</div>
 	</div>
-	<script src="script.js" charset="utf-8" type="text/javascript"/></script>
+	<script src="script.js" charset="utf-8" type="text/javascript"></script>
 </body>
 
 </html>
